tests/data/checker_var_re_asset/good/function_operand.php
<?php
/**
 *
 * @author k.vagin
 */

$a = 1;
$c = 1;
$t = some_function(true, $a, $c);
$a = 2;
$t2 = some_function(true, $a, false);