tests/data/checker_var_re_asset/bad/3.php
<?php
/**
 *
 * @author k.vagin
 */

function vb($a, $b)
{
	$b = null;
	unset($b);
	$b = $a;

	return $a + $b;
}